@@ -27,7 +27,7 @@ import net.minecraft.tileentity.TileEntity;
 import net.minecraft.tileentity.TileEntityFurnace;
 import net.minecraftforge.common.ForgeDirection;
 
-public class TileEntityEnderTransmitter extends TileEntityEnderModem implements IInventory, IBundledUpdatable {
+public class TileEntityEnderTransmitter extends TileEntityEnderModem implements IInventory {
 	public TileEntityEnderTransmitter() {
 		super(false, true); // transmit only
 	}
@@ -129,7 +129,7 @@ public class TileEntityEnderTransmitter extends TileEntityEnderModem implements 
             	entity.worldObj.markBlockForUpdate(xCoord, yCoord, zCoord);
             	entity.startSending = true;
             } else if(action == 3) {
-            	EnderRedirector.sendRedstone(entity.address, entity.rsValue);
+            	EnderRedirector.sendRedstone(entity.address, entity.getRedstoneInternal());
             }
         }
     }
@@ -256,7 +256,7 @@ public class TileEntityEnderTransmitter extends TileEntityEnderModem implements 
 				this.spawnSuccessParticles();
 				break;
 		}
-		this.enderNetID = packet.data.getInteger("eid");
+		this.setEnderNetIDClient(packet.data.getInteger("eid"));
 		this.isReceiveable = packet.data.getBoolean("r");
 		GuiScreen gui = FMLClientHandler.instance().getClient().currentScreen;
 		if (gui != null && gui instanceof GuiEnderTransmitter) {
@@ -327,41 +327,14 @@ public class TileEntityEnderTransmitter extends TileEntityEnderModem implements 
 		}
 		return null;
 	}
-	
-	private int rsValue = 0;
-
-	public void sendRedstone(int value) {
-		if(rsValue == value) return; // already sent
-		rsValue = value;
-		ReceiveThread rt = new ReceiveThread(this, 3);
-		rt.start();
-	}
-	
-	// REDLOGIC COMPATIBILITY
 
 	@Override
-	public void onBundledInputChanged() {
-		// Immibis, please, get a better API.
-		for(ForgeDirection dir: ForgeDirection.VALID_DIRECTIONS) {
-			TileEntity te = worldObj.getBlockTileEntity(xCoord+dir.offsetX, yCoord+dir.offsetY, zCoord+dir.offsetZ);
-			if(te instanceof IBundledWire) {
-				IBundledWire wire = (IBundledWire)te;
-				byte[] data = null;
-				for(int i = -1; i < 6; i++) {
-					if(wire.wireConnectsInDirection(i, (dir.ordinal()))) {
-						data = wire.getBundledCableStrength(i, (dir.ordinal()));
-						break;
-					}
-				}
-				if(data != null) {
-					int value = 0;
-					for(int i = 0; i < 16; i++) {
-						if(data[i] != 0) value |= 1<<i;
-					}
-					System.out.println(value);
-					this.sendRedstone(value);
-				}
-			}
-		}
+	public boolean setRedstoneValue(int value) {
+		System.out.println("Setting value " + value);
+		if(this.getRedstoneInternal() == value) return false; // already sent
+		this.setRedstoneInternal(value);
+		ReceiveThread rt = new ReceiveThread(this, 3);
+		rt.start();
+		return true;
 	}
 }
